2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b210

	* Fix: Update the gallery.xml to work with Mambo 4.5.1
	  (Mainly, remove the 'template' section)

2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b209

	* Change: Minor flow change in mambo section of init.php

	* Change: Addition of 'sessionStart' variable to $gallery->session
	  to help debug session issues

2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b208

	* Change: view_album doesn't need to reference the current album 
	  in breadcrumbs - it's confusing.  view_photo does

2004-09-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b207

	* Fix: Don't unset the mambo session vars immediately after setting them.

	* Change:  Correct a couple popups in view_album

2004-09-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b206

	* Change: If we're in mambo, just set the session info all the time.
	  Only setting the info when popups were created tended to yield errors.

2004-09-23  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b205

	* Fix: Also replace this instance of printf (see log message for b204)

2004-09-23  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b204

	* Fix: Use sprintf instead of printf in the watermark form when setting the
	       error message to a string

2004-09-23  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b203

	* Fix: removed \n after view comments. it was in a single quotes.
	       (caught by Christian M.)

	* Change: Owner can now always see comments. global changed in classes/User.php

	* Fix: view all comments was not working proper.

	* New: Added css class commentIndication. (Currently only used in 'none' and 'jenskin').

2004-09-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b202

	* Change: Link movies to view_photo so that users can leave comments

	* Change: Update printChildren to use some better HTML (fewed redundant nestings)
