@@ -22,7 +22,7 @@
  |
  | $Id$
 -->
-<mosinstall type="component">
+<mosinstall type="component" version="4.5">
 	<name>Gallery</name>
 	<creationDate>February 2004</creationDate>
 	<author>Gallery Development Team</author>
@@ -36,25 +36,25 @@
 	</files>
 	<install>
 		<queries>
-			<query>CREATE TABLE IF NOT EXISTS `mos_gallery`
+			<query id="1">CREATE TABLE IF NOT EXISTS `mos_gallery`
 			           ( `field` varchar(128) PRIMARY KEY,
 				     `value` text default '')
 			</query>
-			<query>INSERT INTO `mos_gallery` (`field`, `value`)
+			<query id="2">INSERT INTO `mos_gallery` (`field`, `value`)
 			           VALUES ('path',          '')
 			</query>
-			<query>INSERT INTO `mos_gallery` (`field`, `value`)
+			<query id="3">INSERT INTO `mos_gallery` (`field`, `value`)
 			           VALUES ('minAuthType',   '20')
 			</query>
-			<query>INSERT INTO `mos_gallery` (`field`, `value`)
+			<query id="4">INSERT INTO `mos_gallery` (`field`, `value`)
 			           VALUES ('hideRightSide', '1')
 			</query>
 		</queries>
 	</install>
 	<uninstall>
 		<queries>
-			<query>DELETE FROM `mos_gallery`;</query>
-			<query>DROP TABLE `mos_gallery`;</query>
+			<query id="1">DELETE FROM `mos_gallery`;</query>
+			<query id="2">DROP TABLE `mos_gallery`;</query>
 		</queries>
 	</uninstall>
 	<administration>
