@@ -1,3 +1,9 @@
+2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b211
+
+	* Fix: Small tweaks to mambo xml, maybe to alleviate uninstall issues?
+
+	* Fix: fullOnly URLs were using do_command?  No idea why, but fixed.
+
 2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b210
 
 	* Fix: Update the gallery.xml to work with Mambo 4.5.1
